permanent fix for z-index bug

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -73,11 +73,10 @@
     max-width: 500px;
     height: 200px;
     box-shadow: 0 3px 15px rgba(94, 84, 84, 0.2);
-    transition: 0.7s linear;
     padding: 1rem;
     border-radius: 8px;
     position: relative;
-    z-index: -1;
+    transition: 0.7s linear;
 
     &:hover {
       transform: translateY(-5px);
@@ -161,6 +160,7 @@
       background: hsl(0 0% 0% /0.75);
       gap: 3rem;
       transform: translateX(100%);
+      z-index: 9;
       transition: transform 350ms ease-out;
     }
 
